--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,15 @@ spring:
       enabled: true
   datasource:
     url: jdbc:h2:mem:testdb
+  application:
+    name: ORDER-SERVICE
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
